# xkcd-1975

./: .gitattributes  .gitignore  AppDelegate.swift  Cargo.toml  Framework.swift  Game.swift  README.md  data.json  main.swift
Assets.xcassets/AppIcon.appiconset/: Contents.json
Base.lproj/: Main.storyboard
XKCD 1975.xcodeproj/: project.pbxproj
src/: lib.rs  main.rs
