[package]
name = "xkcd-1975"
version = "0.1.0"
edition = "2021"
description = "XKCD 1975 reimplemented using macOS menus"
readme = "README.md"
# Same licensing as XKCD in general
license = "CC-BY-2.5"
repository = "https://github.com/madsmtm/xkcd-1975"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
objc2 = "0.4.1"

[dependencies.icrate]
version = "0.0.4"
features = [
    "AppKit",
    "AppKit_NSMenu",
    "AppKit_NSMenuItem",
    "AppKit_NSApplication",
    "AppKit_NSWorkspace",
    "Foundation",
    "Foundation_NSString",
    "Foundation_NSArray",
    "Foundation_NSNotification",
    "Foundation_NSThread",
    "Foundation_NSURL",
    "Foundation_NSProcessInfo",
]
