[package]
name = "xkcd-1975"
version = "0.1.2"
edition = "2021"
description = "XKCD 1975 reimplemented using macOS menus"
readme = "README.md"
# Same licensing as XKCD in general
license = "CC-BY-NC-2.5"
repository = "https://github.com/madsmtm/xkcd-1975"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = [
    "NSArray",
    "NSNotification",
    "NSProcessInfo",
    "NSString",
    "NSThread",
    "NSURL",
    "NSEnumerator",
] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSApplication",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSRunningApplication",
    "NSWorkspace",
] }
