[package]
name = "xkcd-1975"
version = "0.1.4"
edition = "2021"
description = "XKCD 1975 reimplemented using macOS menus"
readme = "README.md"
# Same licensing as XKCD in general
license = "CC-BY-NC-2.5"
repository = "https://github.com/madsmtm/xkcd-1975"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSArray",
    "NSNotification",
    "NSProcessInfo",
    "NSString",
    "NSThread",
    "NSURL",
    "NSEnumerator",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSRunningApplication",
    "NSWorkspace",
] }

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
